--- a/src/component/SectionOne/SectionOne.css
+++ b/src/component/SectionOne/SectionOne.css
@@ -1,9 +1,15 @@
 .job-search-section {
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 50px;
+    width: 90%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
     text-align: center;
-    position: relative;
+    margin: 0 auto;
+    margin-top: 3rem;
 }
 
 .line {
@@ -46,16 +52,17 @@
     align-items: center;  /* Center children horizontally */
 }
 
-.job-search-section h2 {
+#heading {
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 2%;
+    text-align: center;
 }
 
 .job-search-section h3 {
     font-size: 3rem;
     color: #666;
-    width:40%;
+    /* width:40%; */
     text-align: center;
     margin-bottom: 2.5%;
 }
@@ -63,7 +70,8 @@
 .job-search-section p {
     font-size: 1rem;
     color: #888;
-    width: 50%;
+    /* width: 50%; */
+    text-align: center;
     margin: 0 auto;
 }
 
@@ -81,7 +89,17 @@
     margin-top: 8%;
     margin-right: 10px;
 }
-
+@media (width<768px) {
+    #heading{
+        font-size: 1rem;
+    }
+    .job-search-section h3{
+        font-size: 1.5rem
+    }
+    .job-search-section p{
+        font-size: 1rem
+    }
+}
 .img-in-rectangle{
     width:120%;
     margin-bottom: 0;
@@ -89,10 +107,10 @@
 
 .JoinButtonS {
     margin-top: 2%;
-    padding: 0.8rem 2rem;   /* top/bottom padding and left/right padding */
+    padding: 1rem 3rem;    /* top/bottom padding and left/right padding */
     font-size: 1.2rem;
     color: #ffffff;
-    width: 18%;
+    width: fit-content;
     background-color: rgba(226, 11, 60, 0.83);  /* or any desired color */
     border: none;  /* remove default border */
     border-radius: .5rem;  /* rounded corners, adjust as desired */
@@ -111,4 +129,10 @@
 
 .JoinButtonS:active {
     background-color: #FF1493; /* even darker pink on active click */
+}
+
+@media (width<768px) {
+    .JoinButtonS{
+        padding: 0.8rem 1.5rem;
+    }
 }
