--- a/src/component/SectionThree/SectionThree.css
+++ b/src/component/SectionThree/SectionThree.css
@@ -1,22 +1,45 @@
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.left {
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right {
+    width: 44%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .decorative-rectangle {
-    width: 70%;
+    width: 90%;
     height: 550px;
     margin-left: -10%;
     border-radius: 20px;
-    background-color: #f5f5f5; /* Color of the rectangle */
+    background-color: #f5f5f5;
+    /* Color of the rectangle */
     position: relative;
     z-index: 1;
 }
 
 .decorative-rectangle-right {
-    width: 80%;
+    width: 90%;
     height: 600px;
     align-content: flex-end;
     overflow: hidden;
-    left:35%;
+    left: 20%;
 
     border-radius: 20px;
-    background-color: #bad343; /* Color of the rectangle */
+    background-color: #bad343;
+    /* Color of the rectangle */
     position: relative;
     z-index: 1;
 }
@@ -27,84 +50,135 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -45%);
-    width: 55%; /* Adjust based on your needs */
+    width: 55%;
+    /* Adjust based on your needs */
     height: auto;
     z-index: 2;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Shadow added */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    /* Shadow added */
 }
+
 .overlay-image-right {
     position: absolute;
     border-radius: 20px;
     top: 40%;
     left: 60%;
     transform: translate(-50%, -45%);
-    width: 40%; /* Adjust based on your needs */
+    width: 40%;
+    /* Adjust based on your needs */
     height: auto;
     z-index: 2;
 }
-.no-gutter > [class*='col-'] {
+
+.no-gutter>[class*='col-'] {
     padding-right: 0;
     padding-left: 0;
 }
+
 .row.no-gutter {
     margin-right: 0;
     margin-left: 0;
 }
+
 .upper {
     top: -40%;
 }
+
 .overlay-image-two {
     position: absolute;
     border-radius: 20px;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -45%);
-    width: 40%; /* Adjust based on your needs */
+    width: 40%;
+    /* Adjust based on your needs */
     height: auto;
     z-index: 2;
 }
+
 .overlay-image-right-two {
     position: absolute;
     border-radius: 20px;
     top: 65%;
     left: 45%;
     transform: translate(-50%, -45%);
-    width: 35%; /* Adjust based on your needs */
+    width: 35%;
+    /* Adjust based on your needs */
     height: auto;
     z-index: 2;
 }
-.head {
-    font-size: 3rem;
+
+.heading {
+    font-size: 2.4rem;
     margin-bottom: 6%;
 }
 
-.sub {
+.sub-heading {
     font-size: 1.3rem;
     margin-bottom: 6%;
 }
 
+@media (width<768px) {
+    .heading {
+        font-size: 1.5rem;
+    }
+
+    .sub-heading {
+        font-size: 0.8rem;
+    }
+
+    .overlay-image {
+        width: 80%;
+    }
+
+    .overlay-image-two {
+        width: 80%;
+    }
+    .overlay-image-right{
+        width: 80%;
+    }
+    .overlay-image-right-two{
+        width: 80%;
+    }
+}
+
 .JoinButton {
     margin-top: 2%;
-    padding: 0.6rem 1.6rem;   /* top/bottom padding and left/right padding */
+    padding: 0.6rem 1.6rem;
+    /* top/bottom padding and left/right padding */
     font-size: 1.2rem;
     color: #ffffff;
-    width: 45%;
-    background-color: rgba(226, 11, 60, 0.83);  /* or any desired color */
-    border: none;  /* remove default border */
-    border-radius: .5rem;  /* rounded corners, adjust as desired */
+    width: fit-content;
+    background-color: rgba(226, 11, 60, 0.83);
+    /* or any desired color */
+    border: none;
+    /* remove default border */
+    border-radius: .5rem;
+    /* rounded corners, adjust as desired */
     transition: background-color 0.3s ease;
-    align-content: center;/* smooth transition for hover effect */
+    align-content: center;
+    /* smooth transition for hover effect */
 }
 
 .JoinButton:hover {
-    background-color: #FF69B4;  /* slightly darker pink on hover */
-    color: #ffffff;  /* change text color on hover if needed */
+    background-color: #FF69B4;
+    /* slightly darker pink on hover */
+    color: #ffffff;
+    /* change text color on hover if needed */
 }
 
 .JoinButton:focus {
-    box-shadow: 0 0 0 0.2rem rgba(255, 182, 193, 0.5); /* Bootstrap's way to indicate focus, adjust color as needed */
+    box-shadow: 0 0 0 0.2rem rgba(255, 182, 193, 0.5);
+    /* Bootstrap's way to indicate focus, adjust color as needed */
 }
 
 .JoinButton:active {
-    background-color: #FF1493; /* even darker pink on active click */
+    background-color: #FF1493;
+    /* even darker pink on active click */
+}
+
+@media (width<768px) {
+    .JoinButton {
+        padding: 0.3rem 1rem;
+    }
 }
