--- a/src/component/SectionOne/SectionOne.css
+++ b/src/component/SectionOne/SectionOne.css
@@ -1,15 +1,9 @@
 .job-search-section {
     background-repeat: no-repeat;
     background-size: cover;
-    width: 90%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
+    padding: 50px;
     text-align: center;
-    margin: 0 auto;
-    margin-top: 3rem;
+    position: relative;
 }
 
 .line {
@@ -52,17 +46,16 @@
     align-items: center;  /* Center children horizontally */
 }
 
-#heading {
+.job-search-section h2 {
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 2%;
-    text-align: center;
 }
 
 .job-search-section h3 {
     font-size: 3rem;
     color: #666;
-    /* width:40%; */
+    width:40%;
     text-align: center;
     margin-bottom: 2.5%;
 }
@@ -70,8 +63,7 @@
 .job-search-section p {
     font-size: 1rem;
     color: #888;
-    /* width: 50%; */
-    text-align: center;
+    width: 50%;
     margin: 0 auto;
 }
 
@@ -89,17 +81,7 @@
     margin-top: 8%;
     margin-right: 10px;
 }
-@media (width<768px) {
-    #heading{
-        font-size: 1rem;
-    }
-    .job-search-section h3{
-        font-size: 1.5rem
-    }
-    .job-search-section p{
-        font-size: 1rem
-    }
-}
+
 .img-in-rectangle{
     width:120%;
     margin-bottom: 0;
@@ -107,10 +89,10 @@
 
 .JoinButtonS {
     margin-top: 2%;
-    padding: 1rem 3rem;    /* top/bottom padding and left/right padding */
+    padding: 0.8rem 2rem;   /* top/bottom padding and left/right padding */
     font-size: 1.2rem;
     color: #ffffff;
-    width: fit-content;
+    width: 18%;
     background-color: rgba(226, 11, 60, 0.83);  /* or any desired color */
     border: none;  /* remove default border */
     border-radius: .5rem;  /* rounded corners, adjust as desired */
@@ -129,10 +111,4 @@
 
 .JoinButtonS:active {
     background-color: #FF1493; /* even darker pink on active click */
-}
-
-@media (width<768px) {
-    .JoinButtonS{
-        padding: 0.8rem 1.5rem;
-    }
 }
