--- a/src/component/SectionTwo/SectionTwo.css
+++ b/src/component/SectionTwo/SectionTwo.css
@@ -1,5 +1,5 @@
 
-.heading{
+.job-search-section h2 {
     margin-top: 5%;
     font-size: 2.2rem;
     color: #333;
@@ -8,19 +8,11 @@
 
 }
 
-.sub-heading {
+.job-search-section h1 {
     font-size: 3.5rem;
     color: #666;
+    width:55%;
     text-align: center;
     margin-bottom: 2.5%;
     font-weight: 400;
-}
-
-@media (width<768px) {
-    .heading{
-        font-size: 1.5rem;
-    }
-    .sub-heading{
-        font-size: 2rem;
-    }
 }
